fix the image text alignment fixes #16

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,8 +63,12 @@ body, html{
 
 /* SECTION 1 */
 #landing-img {
+  position: relative;
   height: 700px;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: end;
   background: url(../images/landing-img.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -86,8 +90,6 @@ body, html{
 
   background-color: rgba(58, 47, 47, 0.7);
   box-shadow: 10px 10px 5px 12px rgba(58, 47, 47, 0.7);
-  bottom: 180px;
-  right: 20%;
 
   position: absolute;
 }
